--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -15,13 +15,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Ensure full history is pulled
-          submodules: true  # Ensures submodules are pulled
-
-      - name: Debug - Print Working Directory
-        run: pwd
 
       - name: Debug - List Files
-        run: ls -la  # Print directory structure to check pubspec.yaml
+        run: ls -la  # Print directory structure to check for boredom_app
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -29,15 +25,20 @@ jobs:
           flutter-version: '3.31.0-0.1.pre'
           channel: 'beta'
 
+      - name: Debug - Print Working Directory
+        run: pwd
+
       - name: Install Dependencies
         run: flutter pub get
-        working-directory: .  # Explicitly set project root
+        working-directory: boredom_app  
 
       - name: Run Tests
         run: flutter test --verbose
+        working-directory: boredom_app  
 
       - name: Build APK
         run: flutter build apk --release
+        working-directory: boredom_app  
 
   build-macOS:
     runs-on: macOS-latest
@@ -48,13 +49,9 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
-          submodules: true
-
-      - name: Debug - Print Working Directory
-        run: pwd
 
       - name: Debug - List Files
-        run: ls -la  # Print directory structure
+        run: ls -la  
 
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
@@ -64,10 +61,12 @@ jobs:
 
       - name: Install Dependencies
         run: flutter pub get
-        working-directory: .  # Explicitly set project root
+        working-directory: boredom_app  
 
       - name: Run Tests
         run: flutter test --verbose
+        working-directory: boredom_app  
 
       - name: Build macOS
         run: flutter build macos --release --verbose
+        working-directory: boredom_app  
